# amazon-q-developer-cli

./: .gitignore  .lintstagedrc.mjs  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  book.toml  deny.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: check-merge-conflicts.yml  release-notification.yaml  rust.yml  terminal-bench.yaml  typos.yml
build-config/: buildspec-linux.yml  buildspec-macos.yml
crates/amzn-codewhisperer-client/: Cargo.toml
crates/amzn-codewhisperer-client/src/: protocol_serde.rs  serde_util.rs  types.rs
crates/amzn-codewhisperer-client/src/client/: get_usage_limits.rs  list_available_subscriptions.rs  update_usage_limits.rs
crates/amzn-codewhisperer-client/src/operation/: get_usage_limits.rs
crates/amzn-codewhisperer-client/src/operation/get_usage_limits/: _get_usage_limits_input.rs  builders.rs
crates/amzn-codewhisperer-client/src/operation/list_available_subscriptions/: _list_available_subscriptions_output.rs
crates/amzn-codewhisperer-client/src/operation/update_usage_limits/: _update_usage_limits_input.rs  builders.rs
crates/amzn-codewhisperer-client/src/protocol_serde/: shape_disclaimer_list.rs  shape_get_usage_limits_input.rs  shape_list_available_subscriptions.rs  shape_model.rs  shape_subscription_info.rs  shape_subscription_plan_description.rs  shape_update_usage_limits_input.rs  shape_user_context.rs  shape_user_trigger_decision_event.rs
crates/amzn-codewhisperer-client/src/types/: _access_denied_exception_reason.rs  _chat_message_interaction_type.rs  _model.rs  _origin.rs  _overage_capability.rs  _subscription_info.rs  _subscription_management_target.rs  _subscription_plan_description.rs  _suggestion_type.rs  _upgrade_capability.rs  _user_context.rs  _user_trigger_decision_event.rs
crates/amzn-codewhisperer-streaming-client/: Cargo.toml
crates/amzn-consolas-client/: Cargo.toml
crates/amzn-qdeveloper-streaming-client/: Cargo.toml
crates/chat-cli/: Cargo.toml  build.rs  telemetry_definitions.json
crates/chat-cli/src/api_client/: delay_interceptor.rs  error.rs  mod.rs  retry_classifier.rs
crates/chat-cli/src/auth/: builder_id.rs
crates/chat-cli/src/cli/: agent.rs  feed.rs  mcp.rs  mod.rs
crates/chat-cli/src/cli/agent/: context_migrate.rs  hook.rs  mcp_config.rs  mod.rs  root_command_args.rs  wrapper_types.rs
crates/chat-cli/src/cli/agent/legacy/: context.rs  hooks.rs  mod.rs
crates/chat-cli/src/cli/chat/: consts.rs  context.rs  conversation.rs  input_source.rs  line_tracker.rs  message.rs  mod.rs  parse.rs  parser.rs  prompt.rs  prompt_parser.rs  server_messenger.rs  skim_integration.rs  tool_manager.rs
crates/chat-cli/src/cli/chat/cli/: clear.rs  compact.rs  context.rs  editor.rs  experiment.rs  hooks.rs  knowledge.rs  mcp.rs  mod.rs  model.rs  persist.rs  profile.rs  prompts.rs  tangent.rs  todos.rs  tools.rs  usage.rs
crates/chat-cli/src/cli/chat/tools/: custom_tool.rs  fs_read.rs  fs_write.rs  gh_issue.rs  introspect.rs  knowledge.rs  mod.rs  todo.rs  tool_index.json  use_aws.rs
crates/chat-cli/src/cli/chat/tools/execute/: mod.rs  unix.rs  windows.rs
crates/chat-cli/src/cli/chat/util/: mod.rs  test.rs
crates/chat-cli/src/database/: mod.rs  settings.rs
crates/chat-cli/src/mcp_client/: client.rs  messenger.rs
crates/chat-cli/src/os/: env.rs
crates/chat-cli/src/telemetry/: core.rs  definitions.rs  mod.rs
crates/chat-cli/src/util/: consts.rs  directories.rs  knowledge_store.rs  mod.rs  pattern_matching.rs
crates/cli/src/api_client/clients/: alternative_provider_client.rs  mod.rs  streaming_client.rs
crates/cli/src/cli/chat/: mod.rs
crates/semantic-search-client/: Cargo.toml  README.md
crates/semantic-search-client/src/: config.rs  lib.rs  model_validator.rs  pattern_filter.rs  types.rs
crates/semantic-search-client/src/client/: async_implementation.rs  embedder_factory.rs  hosted_model_client.rs  implementation.rs  mod.rs
crates/semantic-search-client/src/client/background/: background_worker.rs  file_processor.rs  mod.rs
crates/semantic-search-client/src/client/context/: bm25_context.rs  context_creator.rs  context_manager.rs  mod.rs
crates/semantic-search-client/src/client/model/: mod.rs  model_downloader.rs
crates/semantic-search-client/src/client/operation/: mod.rs  operation_manager.rs
crates/semantic-search-client/src/embedding/: benchmark_test.rs  candle.rs  candle_models.rs  mod.rs  trait_def.rs
crates/semantic-search-client/src/index/: bm25_index.rs  mod.rs  vector_index.rs
crates/semantic-search-client/src/processing/: file_processor.rs  mod.rs  text_chunker.rs
crates/semantic-search-client/tests/: test_async_client.rs
docs/: SUMMARY.md  agent-file-locations.md  agent-format.md  built-in-tools.md  default-agent-behavior.md  experiments.md  introduction.md  introspect-tool.md  knowledge-management.md  legacy-profile-to-agent-migration.md  native-tools.md  tangent-mode.md  the-agent-format.md  todo-lists.md
docs/draft/: the-agent-format-2.md
schemas/: agent-v1.json
scripts/: build.py  main.py
terminal-bench-test/: main.py  setup_amazon_q.sh
